--- a/index.html
+++ b/index.html
@@ -2,55 +2,107 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>WINDOW — Anti-Surveillance System</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WINDOW — Anti-Surveillance System</title>
 
   <link rel="stylesheet" href="style.css" />
 
-  <!-- WebGazer -->
+  <!-- WebGazer (Eye Tracking) -->
   <script src="https://webgazer.cs.brown.edu/webgazer.js"></script>
 </head>
 <body>
-
-  <!-- SCENE: LOADING -->
+  <!-- Scene 1: Loading -->
   <div id="scene-loading" class="scene active">
-    <div class="center">
-      <h1>WINDOW</h1>
-      <p class="subtitle">Initializing monitoring system…</p>
-      <button id="btn-start">Start Calibration</button>
+    <div class="loading-center">
+      <div class="system-title">WINDOW // MONITOR SYSTEM</div>
+      <div id="loading-text" class="loading-text">
+        Initializing… Camera permission is required for eye tracking.
+      </div>
+      <button id="btn-start" class="btn primary">START CALIBRATION</button>
     </div>
   </div>
 
-  <!-- SCENE: WALL -->
+  <!-- Scene 2: Wall -->
   <div id="scene-wall" class="scene">
-    <header>
-      <span>WINDOW / CCTV GRID</span>
-      <span id="status">EYE: TRACKING</span>
+    <header class="top-bar">
+      <div class="logo">WINDOW / CCTV GRID</div>
+      <div class="status">
+        <span id="status-eye">EYE: INIT</span>
+        <span id="status-mode">MODE: IDLE</span>
+      </div>
     </header>
 
-    <main>
-      <section id="wall-grid"></section>
+    <main class="wall-layout">
+      <section class="wall-grid" id="wall-grid"></section>
 
-      <aside>
-        <h3>Behavior Label</h3>
-        <div id="behavior-label">UNIDENTIFIED</div>
+      <aside class="side-panel">
+        <div class="panel-block">
+          <h3>Behavior Label</h3>
+          <div id="label-viewer" class="panel-text">UNIDENTIFIED</div>
+        </div>
 
-        <h3>Voyeur Score</h3>
-        <div id="voyeur-score">0</div>
+        <div class="panel-block">
+          <h3>Voyeur Score</h3>
+          <div id="score-voyeur" class="panel-text-large">0</div>
+        </div>
 
-        <button id="btn-to-report">Generate Report</button>
+        <div class="panel-block">
+          <button id="btn-to-logs" class="btn">ENTER LOG CONSOLE</button>
+        </div>
       </aside>
     </main>
 
     <div id="gaze-dot"></div>
   </div>
 
-  <!-- SCENE: REPORT -->
+  <!-- Scene 3: Logs -->
+  <div id="scene-logs" class="scene">
+    <header class="top-bar">
+      <div class="logo">WINDOW / LOG CONSOLE</div>
+      <div class="status">
+        <span id="status-log-eye">EYE: TRACKING</span>
+        <span id="status-log-level">RISK: LOW</span>
+      </div>
+    </header>
+
+    <main class="logs-layout">
+      <section class="logs-panel">
+        <div id="log-lines" class="log-lines"></div>
+      </section>
+
+      <aside class="side-panel">
+        <div class="panel-block">
+          <h3>System Note</h3>
+          <div id="log-sensitivity" class="panel-text">Awaiting gaze signals…</div>
+        </div>
+
+        <div class="panel-block">
+          <button id="btn-to-report" class="btn">GENERATE REPORT</button>
+        </div>
+      </aside>
+    </main>
+
+    <div id="gaze-dot-logs"></div>
+  </div>
+
+  <!-- Scene 4: Report -->
   <div id="scene-report" class="scene">
-    <div class="center report">
-      <h2>Behavior Analysis Report</h2>
-      <div id="report-text"></div>
-      <button id="btn-restart">Restart</button>
+    <div class="report-center">
+      <h1>Behavior Analysis Report</h1>
+      <div id="report-text" class="report-text"></div>
+      <button id="btn-restart" class="btn">RESTART</button>
+    </div>
+  </div>
+
+  <!-- Calibration Overlay -->
+  <div id="calibration-overlay" class="calibration hidden">
+    <div class="calib-box">
+      <h2>Calibration</h2>
+      <p>
+        Look at the center of your screen and keep still for a moment.<br />
+        Then click “BEGIN TRACKING”.
+      </p>
+      <button id="btn-calib-start" class="btn primary">BEGIN TRACKING</button>
     </div>
   </div>
 
