--- a/index.html
+++ b/index.html
@@ -1,76 +1,111 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
   <meta charset="UTF-8" />
-  <title>WINDOW — Anti-Surveillance System</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WINDOW - 反窥视监控系统</title>
 
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Eye Tracking -->
+  <!-- Typed.js 打字机效果（以后用在加载文字、日志等） -->
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.16"></script>
+  <!-- WebGazer.js 眼动追踪 -->
   <script src="https://webgazer.cs.brown.edu/webgazer.js"></script>
 </head>
 <body>
-
-  <!-- SCENE 1: LOADING -->
-  <section id="scene-loading" class="scene active">
-    <div class="center">
-      <h1 class="title">WINDOW</h1>
-      <p class="subtitle">Monitoring system initializing…</p>
-      <button id="btn-start" class="btn primary">BEGIN CALIBRATION</button>
+  <!-- 场景 1：加载画面 -->
+  <div id="scene-loading" class="scene active">
+    <div class="loading-center">
+      <div class="system-title">WINDOW // MONITOR SYSTEM</div>
+      <div id="loading-text" class="loading-text"></div>
+      <button id="btn-start" class="btn primary">开始系统校准</button>
     </div>
-  </section>
+  </div>
 
-  <!-- SCENE 2: CCTV WALL -->
-  <section id="scene-wall" class="scene">
+  <!-- 场景 2：监控墙 -->
+  <div id="scene-wall" class="scene">
     <header class="top-bar">
-      <span class="logo">WINDOW / CCTV GRID</span>
-      <span id="eye-status" class="status">EYE: OFF</span>
+      <div class="logo">WINDOW / CCTV GRID</div>
+      <div class="status">
+        <span id="status-eye">EYE: INIT</span>
+        <span id="status-mode">MODE: IDLE</span>
+      </div>
     </header>
 
     <main class="wall-layout">
-      <div id="wall-grid" class="wall-grid"></div>
+      <section class="wall-grid" id="wall-grid">
+        <!-- JS 里动态生成一堆小监控窗口 -->
+      </section>
 
       <aside class="side-panel">
-        <div class="panel">
-          <h3>Behavior</h3>
-          <div id="behavior-label">UNIDENTIFIED</div>
+        <div class="panel-block">
+          <h3>当前观察标签</h3>
+          <div id="label-viewer" class="panel-text">尚未确定</div>
         </div>
-
-        <div class="panel">
-          <h3>Voyeur Score</h3>
-          <div id="voyeur-score">0</div>
+        <div class="panel-block">
+          <h3>偷窥倾向指数</h3>
+          <div id="score-voyeur" class="panel-text-large">0</div>
         </div>
-
-        <button id="btn-to-report" class="btn">GENERATE REPORT</button>
+        <div class="panel-block">
+          <button id="btn-to-logs" class="btn">进入日志后台</button>
+        </div>
       </aside>
     </main>
 
+    <!-- 眼动位置小点 -->
     <div id="gaze-dot"></div>
-  </section>
+  </div>
 
-  <!-- SCENE 3: REPORT -->
-  <section id="scene-report" class="scene">
-    <div class="center report">
-      <h2>Behavior Analysis</h2>
-      <div id="report-text"></div>
-      <button id="btn-restart" class="btn">RESTART</button>
+  <!-- 场景 3：日志后台 -->
+  <div id="scene-logs" class="scene">
+    <header class="top-bar">
+      <div class="logo">WINDOW / LOG CONSOLE</div>
+      <div class="status">
+        <span id="status-log-eye">EYE: TRACKING</span>
+        <span id="status-log-level">RISK: LOW</span>
+      </div>
+    </header>
+
+    <main class="logs-layout">
+      <section class="logs-panel">
+        <div id="log-lines" class="log-lines">
+          <!-- JS 动态添加一行一行的日志 -->
+        </div>
+      </section>
+      <aside class="side-panel">
+        <div class="panel-block">
+          <h3>注视敏感度</h3>
+          <div id="log-sensitivity" class="panel-text">等待数据...</div>
+        </div>
+        <div class="panel-block">
+          <button id="btn-to-report" class="btn">生成监控报告</button>
+        </div>
+      </aside>
+    </main>
+
+    <div id="gaze-dot-logs"></div>
+  </div>
+
+  <!-- 场景 4：结局 / 报告 -->
+  <div id="scene-report" class="scene">
+    <div class="report-center">
+      <h1>监控行为分析报告</h1>
+      <div id="report-text" class="report-text">
+        <!-- JS 根据你全过程的眼动数据生成一段文字 -->
+      </div>
+      <button id="btn-restart" class="btn">重新体验</button>
     </div>
-  </section>
+  </div>
 
-  <!-- CALIBRATION OVERLAY -->
-  <div id="calibration" class="overlay hidden">
-    <div class="overlay-box">
-      <h2>Calibration</h2>
-      <p>
-        Look at the center of your screen.<br />
-        Stay still for a moment, then begin.
-      </p>
-      <button id="btn-calibrate" class="btn primary">START TRACKING</button>
+  <!-- 校准提示（简单版） -->
+  <div id="calibration-overlay" class="calibration hidden">
+    <div class="calib-box">
+      <h2>简单校准</h2>
+      <p>请看着屏幕中央，然后点击“开始”。</p>
+      <button id="btn-calib-start" class="btn primary">开始校准</button>
     </div>
   </div>
 
   <script src="main.js"></script>
 </body>
 </html>
-
