--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!-- Scene: Camera Viewer -->
+<div id="scene-cam-viewer" class="scene">
+  <div class="cam-viewer">
+    <button id="btn-close-cam" class="btn close-btn">✕</button>
+    <video id="cam-video" autoplay playsinline></video>
+  </div>
+</div>
 <!DOCTYPE html>
 <html lang="en">
 <head>
