--- a/index.html
+++ b/index.html
@@ -11,38 +11,102 @@
 
 <body>
 
-<header class="top-bar">
-  <div>WINDOW / CCTV GRID</div>
-  <div>EYE: ACTIVE · MODE: OBSERVATION</div>
-</header>
-
-<main class="layout">
-
-  <!-- LEFT MAIN VIEW -->
-  <section id="main-viewer" class="main-viewer">
-    <video id="main-video" autoplay muted playsinline></video>
+  <!-- SCENE: START -->
+  <section id="scene-start" class="scene active">
+    <div class="start-center">
+      <h1 class="start-title">WINDOW // MONITOR SYSTEM</h1>
+      <p class="start-sub">Initializing monitoring system...</p>
+      <button id="btn-start" class="btn primary">Start System Calibration</button>
+      <p class="start-hint">Tip: Allow camera permission for eye tracking.</p>
+    </div>
   </section>
 
-  <!-- CENTER CCTV WALL -->
-  <section id="wall-grid" class="wall-grid"></section>
+  <!-- SCENE: WALL -->
+  <section id="scene-wall" class="scene">
+    <header class="top-bar">
+      <div class="top-left">WINDOW / CCTV GRID</div>
+      <div class="top-right">EYE: ACTIVE · MODE: OBSERVATION</div>
+    </header>
 
-  <!-- RIGHT PANEL -->
-  <aside class="side-panel">
-    <div class="panel">
-      <h3>Current Focus</h3>
-      <div id="label-viewer">None</div>
-    </div>
+    <main class="layout">
+      <!-- LEFT: FOCUS VIEW (video / webcam) -->
+      <section class="left-panel">
+        <div class="focus-header">
+          <div class="focus-title">FOCUS VIEW</div>
+          <button id="focus-close" class="btn tiny">× Close</button>
+        </div>
 
-    <div class="panel">
-      <h3>Voyeur Score</h3>
-      <div id="score-voyeur">0</div>
-    </div>
-  </aside>
+        <div id="focus-view" class="focus-view">
+          <div id="focus-placeholder" class="focus-placeholder">
+            No feed selected.<br/>
+            Fixate CAM_01 or CAM_02 for 3.0s to open a feed.
+          </div>
 
-</main>
+          <video id="focus-video" class="focus-video" autoplay muted playsinline></video>
+        </div>
+      </section>
 
-<div id="gaze-dot"></div>
+      <!-- CENTER: 6 CAM WALL (STATIC) -->
+      <section id="wall-grid" class="wall-grid">
+        <div class="cam cam-01" data-cam="CAM_01">
+          <div class="rec">REC</div>
+          <div class="cam-label">PRIVATE_SUITE / CAM_01</div>
+        </div>
 
-<script src="main.js"></script>
+        <div class="cam cam-02" data-cam="CAM_02">
+          <div class="rec">REC</div>
+          <div class="cam-label">SERVICE_CORRIDOR / CAM_02</div>
+        </div>
+
+        <div class="cam cam-03" data-cam="CAM_03">
+          <div class="rec">REC</div>
+          <div class="cam-label">STAIRWELL_C2 / CAM_03</div>
+        </div>
+
+        <div class="cam cam-04" data-cam="CAM_04">
+          <div class="rec">REC</div>
+          <div class="cam-label">REAR_ENTRANCE / CAM_04</div>
+        </div>
+
+        <div class="cam cam-05" data-cam="CAM_05">
+          <div class="rec">REC</div>
+          <div class="cam-label">PARKING_LOT_A / CAM_05</div>
+        </div>
+
+        <div class="cam cam-06" data-cam="CAM_06">
+          <div class="rec">REC</div>
+          <div class="cam-label">OFFICE_DESK_03 / CAM_06</div>
+        </div>
+      </section>
+
+      <!-- RIGHT: STATUS -->
+      <aside class="side-panel">
+        <div class="panel">
+          <h3>Current Focus</h3>
+          <div id="label-viewer">None</div>
+          <div class="progress-wrap">
+            <div id="fix-progress" class="progress-bar"></div>
+          </div>
+        </div>
+
+        <div class="panel">
+          <h3>Voyeur Score</h3>
+          <div id="score-voyeur" class="score">0</div>
+        </div>
+
+        <div class="panel small">
+          <div id="eye-stability">EYE STABILITY: —</div>
+        </div>
+      </aside>
+    </main>
+
+    <!-- gaze dot -->
+    <div id="gaze-dot" aria-hidden="true"></div>
+
+    <!-- reused webcam overlay for ghost reflection -->
+    <video id="ghost-video" class="ghost-video" autoplay muted playsinline></video>
+  </section>
+
+  <script src="main.js"></script>
 </body>
 </html>
